@@ -6,7 +6,7 @@ As of durexForth v1.2, high-resolution graphics support is included.
 
 Turtle graphics are mostly known from LOGO, a 1970s programming language.
 It enables control of a turtle that can move and turn while holding a pen.
-The turtle graphics library is loaded with \texttt{s" turtle" load}.
+The turtle graphics library is loaded with \texttt{include turtle}.
 
 \begin{description}
 \item[init ( -- )] Initializes turtle graphics.
@@ -20,7 +20,7 @@ The turtle graphics library is loaded with \texttt{s" turtle" load}.
 
 \section{High-Resolution Graphics}
 
-The high-resolution graphics library is loaded with \texttt{s" gfx" load}. 
+The high-resolution graphics library is loaded with \texttt{include gfx}. 
 It is inspired by "Step-by-Step Programming Commodore 64: Graphics Book 3."
 Some demonstrations can be found in \texttt{gfxdemo}. 
 \begin{description}
