@@ -39,7 +39,7 @@ Some demonstration files are included as appetizers.
 The gfxdemo package demonstrates the high-resolution graphics, with some examples adapted from the book "Step-By-Step Programming C64 Graphics" by Phil Cornes. 
 Show the demos by entering:
 
-\texttt{s" gfxdemo" load}
+\texttt{include gfxdemo}
 
 When a demo has finished drawing, press any key to continue.
 
@@ -47,7 +47,7 @@ When a demo has finished drawing, press any key to continue.
 
 The fractals package demonstrates turtle graphics by generating fractal images. Run it by entering:
 
-\texttt{s" fractals" load}
+\texttt{include fractals}
 
 When an image has finished drawing, press any key to continue.
 
@@ -55,12 +55,12 @@ When an image has finished drawing, press any key to continue.
 
 The mmldemo package demonstrates the MML music capabilities. To play some music:
 
-\texttt{s" mmldemo" load}
+\texttt{include mmldemo}
 
 \subsection{Sprites}
 
 The sprite package adds functionality for defining and displaying sprites. To run the demo:
 
-\texttt{s" spritedemo" load}
+\texttt{include spritedemo}
 
 Exit the demo by pressing any key.
