@@ -131,7 +131,7 @@ To reduce RAM usage, you may make a stripped-down version of durexForth. Do this
 \begin{enumerate}
 \item Issue \texttt{forget modules} to forget all modules.
 \item Optionally re-add the \texttt{modules} marker with \texttt{header modules}.
-\item One by one, load the modules you want included with your new Forth. (E.g. \texttt{s" debug" load})
+\item One by one, load the modules you want included with your new Forth. (E.g. \texttt{include debug})
 \item Save the new system with e.g. \texttt{s" acmeforth" save-forth}.
 \end{enumerate}
 
