@@ -254,3 +254,5 @@ Thanks to polluks for suggestions!
 v1.5.1
 
  * forth: made .( immediate
+ * forth: renamed load => included
+ * forth: added include (e.g. "include gfx" loads gfx module)
